# movie-collector

./: .gitignore  Makefile  README.md  pyproject.toml
data/prepared/: imdb_prepared.csv
data/raw/: imdb_raw.csv
movie_collector/: __init__.py  collector.py
tests/: test_movie_collector.py
